# rag

./: .deepeval  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  model_pull.sh  pyproject.toml
frontend/: Dockerfile  main.py
rag_agent_man/: db.py  embedder.py  graph.py  loader.py  main.py  prompt.py  rag.py  rag_orchestrator.py  retrieve.py  splitter.py  test_rag.py  vector_store.py
rag_agent_man/tests/: data.json  evaluate_retriever.py  utils.py
rag_agent_man/tests/test_data/: generator_test_data.json  retriever_test_data.json
scraper/: settings.py
scraper/spiders/: degrees_spider.py  misc_spider.py
