[tool.poetry]
name = "rag-agent-man"
version = "0.1.0"
description = ""
authors = ["Daniel Serrano <dserranog@unal.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
requests = "^2.32.3"
bs4 = "^0.0.2"
scrapy = "^2.12.0"
chromadb-client = "^0.5.23"
langchain-chroma = "^0.1.4"
langchain-ollama = "^0.2.2"
unstructured = {extras = ["md"], version = "^0.16.11"}
nltk = "^3.9.1"
langchain-community = "^0.3.13"
sentence-transformers = "^3.3.1"
langchain-huggingface = "^0.1.2"
langfuse = "^2.57.5"
langgraph = "^0.2.61"
deepeval = "2.1.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["I", "F"]
fix = true
fixable = ["I"]
line-length = 88
